Restructure factory logic and ensure it works in console.

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -8,7 +8,20 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>Hello World!</div>
+    <div class="container">
+        <div id="display"></div>
+        <div id="grid">
+            <div class="row1 column1"></div>
+            <div class="row1 column2"></div>
+            <div class="row1 column3"></div>
+            <div class="row2 column1"></div>
+            <div class="row2 column2"></div>
+            <div class="row2 column3"></div>
+            <div class="row3 column1"></div>
+            <div class="row3 column2"></div>
+            <div class="row3 column3"></div>
+        </div>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
