Add styling and clean up code

--- a/tic-tac-toe.html
+++ b/tic-tac-toe.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div id="display"></div>
+        <div id="header">Tic Tac Toe</div>
         <div id="grid">
             <div class="row1 column1"></div>
             <div class="row1 column2"></div>
@@ -21,6 +21,8 @@
             <div class="row3 column2"></div>
             <div class="row3 column3"></div>
         </div>
+        <div id="display">Player 1 Turn</div>
+        <div id="restart">Restart Game</div>
     </div>
     <script src="scripts.js"></script>
 </body>
